# analyse_customer_reviews

./: .pre-commit-config.yaml  README.md  conda.yaml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
datalake/text_reviews_dataset/: airfrance_tripadvisor_reviews.csv
notebook/: customer.ipynb
src/agent/: __init__.py  gpt.py  main.py  prompt_generation.py  state.py  whisper.py
